Ready for release
Removed the colour ramp

--- a/Supplementary_information.ipynb
+++ b/Supplementary_information.ipynb
@@ -88,73 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAO0AAABECAYAAABtXrKpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAATtJREFUeJzt1jFKxFAARdHMMLgZd6BM5yJcgZWlpUwhllO6HDvRHbgZ\nEb+tzQQFNV45p/0EHiGXn9UYY0xAxnrpAcDXiBZiRAsxooUY0ULMbLRvry+/tQP44Pzi9uDZZu7B\n9eZoero7+/ZBf8XJ5f10vDv8cuqeb66nq9Pt0jN+zP7xYfbj/q/8HkOMaCFGtBAjWogRLcSIFmJE\nCzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZiRAsxooUY0UKMaCFG\ntBAjWogRLcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZi\nRAsxooUY0UKMaCFGtBAjWogRLcSsxhhj6RHA57lpIUa0ECNaiBEtxIgWYkQLMe9dCxcFxiAPSgAA\nAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x21586ede0f0>"
+       "\"pal0 = ['#C59343','#2A7D83','#733A3C', '#576583'] \\nsns.palplot(pal0)\\npal01 = ['#733A3C','#784457','#6E5371','#576583','#377687',\\n         '#26847C','#408E67','#699550','#97963F','#C59343']\\nsns.palplot(pal01)\\npal = ['#733A3C','#773E48','#784356','#754A63','#70526F',\\n       '#675A79','#5B6281','#4D6B85','#3E7387','#307A85',\\n       '#278180','#298678','#358B6F','#469063','#599358',\\n       '#6E954D','#849644','#9A963F','#B0953E']\\nsns.palplot(pal)\\npal2 = ['#733A3C','#784354','#71506C','#5F607F','#447087',\\n        '#2A7D83','#2C8975','#4C9160','#72964B','#9C963F','#C59343']\\nsns.palplot(pal2)\\npal3 =['#733A3C','#773E47','#784253','#76485F','#724E6A',\\n       '#6B5674','#625E7C','#576583','#4A6D86','#3C7487',\\n       '#2F7A85','#278080','#28867A','#318A71','#408E67',\\n       '#51925D','#639453','#76964A','#8A9642','#9E963E',\\n       '#B2953E','#C59343']\\nsns.palplot(pal3)\\npal4 = ['#6B465F','#6A5D7D','#5C7796','#48C09D','#76D48A','#AFE376','#EFEE69']\\nsns.palplot(pal4)\""
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAjwAAABECAYAAACF4e8fAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAAfRJREFUeJzt20EqxUEAx/F5juASdtYiRXEAZfFOoEdKpBBWCKVshJzg\n3YGiRK7gCFb2LP5OgNW8qV+fz3Y2v+W3mabXdV1XAACCjbUeAABQm+ABAOIJHgAgnuABAOIJHgAg\n3p/B8/31NaodAADV9P77lr49MzuqLSN38fJc9hb7rWdUc3o/LBvLW61nVPExPl6Gdwelv3LcekoV\nw7uDMrVz1npGNW/nu2Xi5LD1jGre94/K/OWg9YxqHjdvy9r1UusZVUz2Pstg9anc3sy1nlLFYPWp\nvF4ttJ5RzfT6w69nnrQAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCI\nJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gA\ngHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiC\nBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHiCBwCI\nJ3gAgHiCBwCIJ3gAgHiCBwCIJ3gAgHi9ruu61iMAAGpywwMAxBM8AEA8wQMAxBM8AEA8wQMAxBM8\nAEC8H+0TL2nuyrMgAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x2158a2adbe0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAABDIAAABECAYAAABznRXvAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAAvRJREFUeJzt27tqFVEAheEd0Vj5HmJnYyNyLBQRIY2FeOlUMBKIQpCc\nE4gYyIUQMIGQCMbOS2VhIIjYGMTGxk58loiMT+AhhdvtOnxfOwwsmGJmfmbGuq7rCgAAAECAI60H\nAAAAAByWkAEAAADEEDIAAACAGEIGAAAAEEPIAAAAAGIMDRk/Dw7+1Q4AAACAUkop77Z6fzx2dNiJ\nx8bHy8zZc3990P9i7cvnMtu73HpGNSv770v/wrXWM6r4dfxEWd3bKY+u3Gk9pYrVvZ3y8OqD1jOq\nefp2vdy7OWg9o5pnr5bKrdsLrWdU8/LFfJmYWmo9o5rdzUHpzay0nlHF/tpsOT03utfu2+KgnFx4\n0npGNT/mH5dTy/3WM6r53l8uZ9ZG9973dWa9XNoYzeeWD9M75cbm9dYzqnk99aZMb020nlHNxv3d\nsrh9sfWMauYmP5bn2+dbz6jm7uSnoS/8o8qvJQAAAEAMIQMAAACIIWQAAAAAMYQMAAAAIIaQAQAA\nAMQQMgAAAIAYQgYAAAAQQ8gAAAAAYggZAAAAQAwhAwAAAIghZAAAAAAxhAwAAAAghpABAAAAxBAy\nAAAAgBhCBgAAABBDyAAAAABiCBkAAABADCEDAAAAiCFkAAAAADGEDAAAACCGkAEAAADEEDIAAACA\nGEIGAAAAEEPIAAAAAGIIGQAAAEAMIQMAAACIIWQAAAAAMYQMAAAAIIaQAQAAAMQQMgAAAIAYQgYA\nAAAQQ8gAAAAAYggZAAAAQAwhAwAAAIghZAAAAAAxhAwAAAAghpABAAAAxBAyAAAAgBhCBgAAABBD\nyAAAAABiCBkAAABADCEDAAAAiCFkAAAAADGEDAAAACCGkAEAAADEEDIAAACAGEIGAAAAEEPIAAAA\nAGIIGQAAAEAMIQMAAACIIWQAAAAAMYQMAAAAIIaQAQAAAMQY67quaz0CAAAA4DB8kQEAAADEEDIA\nAACAGEIGAAAAEEPIAAAAAGIIGQAAAEAMIQMAAACI8Rv7IkWNzX8QygAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x2158a3305f8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAnQAAABECAYAAAAIjKhLAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAAh9JREFUeJzt3DFKnEEAhuFZwV7wDjbiBZRAik0XixT2SqqFpDAJS4Qg\nSwhERBFCYKuw26fdzi2EYC4gniLgAbT4PUESWJkdPniedpqvfJmB6XVd1xUAAGKttB4AAMDTCDoA\ngHCCDgAgnKADAAgn6AAAwv0z6B7u75e1AwCABfX+923Jh51ny9qydGfXv8pRf6/1jGq+zn+Wd6/e\ntp5Rxd3aeplORmX/YNR6ShXTyai8ODxpPaOay4uPZfP4S+sZ1dx+/lS2ToetZ1RzMzwtu98OWs+o\nYmP1TzkfzMr78cvWU6o4H8zKj/Hz1jOqeT24Kr+/91vPqGb7zfyvZ55cAQDCCToAgHCCDgAgnKAD\nAAgn6AAAwgk6AIBwgg4AIJygAwAIJ+gAAMIJOgCAcIIOACCcoAMACCfoAADCCToAgHCCDgAgnKAD\nAAgn6AAAwgk6AIBwgg4AIJygAwAIJ+gAAMIJOgCAcIIOACCcoAMACCfoAADCCToAgHCCDgAgnKAD\nAAgn6AAAwgk6AIBwgg4AIJygAwAIJ+gAAMIJOgCAcIIOACCcoAMACCfoAADCCToAgHCCDgAgnKAD\nAAgn6AAAwgk6AIBwgg4AIJygAwAIJ+gAAMIJOgCAcIIOACCcoAMACCfoAADCCToAgHCCDgAgnKAD\nAAgn6AAAwvW6rutajwAAYHFu6AAAwgk6AIBwgg4AIJygAwAIJ+gAAMIJOgCAcI9O/DJpehHpPQAA\nAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x2158a3ab160>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAABNoAAABECAYAAABXqFhqAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAA0dJREFUeJzt27lqVkEAhuGJglh4IdqJpRJEtFCCCCJo5YIixg1cfpIY\nJASXGOICMTEWiksniCASYqFICFqKnd6HXQSPV2Aav8lgeJ52TvGd8rzM6eu6risAAAAAwD9Z13oA\nAAAAAKwFQhsAAAAABAhtAAAAABAgtAEAAABAgNAGAAAAAAErhrZfy8urtQMAAAAA/mt9Xdd1Kz1w\ndUf/am1ZdXc/L5XhnXtbz6jmzuL7MrL7UOsZVfzesKlMLjwvQ/uOt55SxeTC83LlwLnWM6q593a2\nnD/caz2jmplXU+XkseutZ1Tz9MWNcuT0zdYzqvi5cX2Znx4pAxcnWk+pYn56pPT37rSeUc3S1HDZ\nOnq79Yxqvt26VjaPj7eeUc2PsbGyZWK09Yxqvo/cKtumLreeUcXX3v2y68GZ1jOq+XTpcTn48Gjr\nGdW8ufCynJpdm98MpZTy5NzrMjQ30HpGNZOD82VqbnfrGVX0Bj+WZ3M7W8+o5sTgYnn3aO2+3/6z\ni+XLzJ7WM6rZfv7DX8/8OgoAAAAAAUIbAAAAAAQIbQAAAAAQILQBAAAAQIDQBgAAAAABQhsAAAAA\nBAhtAAAAABAgtAEAAABAgNAGAAAAAAFCGwAAAAAECG0AAAAAECC0AQAAAECA0AYAAAAAAUIbAAAA\nAAQIbQAAAAAQILQBAAAAQIDQBgAAAAABQhsAAAAABAhtAAAAABAgtAEAAABAgNAGAAAAAAFCGwAA\nAAAECG0AAAAAECC0AQAAAECA0AYAAAAAAUIbAAAAAAQIbQAAAAAQILQBAAAAQIDQBgAAAAABQhsA\nAAAABAhtAAAAABAgtAEAAABAgNAGAAAAAAFCGwAAAAAECG0AAAAAECC0AQAAAECA0AYAAAAAAUIb\nAAAAAAQIbQAAAAAQILQBAAAAQIDQBgAAAAABQhsAAAAABAhtAAAAABAgtAEAAABAgNAGAAAAAAFC\nGwAAAAAECG0AAAAAECC0AQAAAECA0AYAAAAAAUIbAAAAAAQIbQAAAAAQILQBAAAAQIDQBgAAAAAB\nfV3Xda1HAAAAAMD/zo02AAAAAAgQ2gAAAAAgQGgDAAAAgAChDQAAAAAChDYAAAAACBDaAAAAACDg\nDy9OU2kIePk8AAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x2158a430da0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZQAAABECAYAAACmjMM7AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAAZ1JREFUeJzt2jFOVUEAhtH7XIH27MBFUBo6N6AxdoAtwcqCSmKL2hkD\nG6AjlCzCHdBrDcW4AYOF330TzDnlVH/3ZSazGWOMBQD+0ZPZAwD4PwgKAAlBASAhKAAkBAWAxINB\nub+739YOAB65zd++Db978WZLU7bv7Pr7cvj6w+wZq/l8frK8ev919ozVXHzcX/Zuvs2esYqr3bfL\n8Y9Ps2es5vT50XJ5ezx7xmpe7pwuv34ezJ6xmqfPvvzx3JMXAAlBASAhKAAkBAWAhKAAkBAUABKC\nAkBCUABICAoACUEBICEoACQEBYCEoACQEBQAEoICQEJQAEgICgAJQQEgISgAJAQFgISgAJAQFAAS\nggJAQlAASAgKAAlBASAhKAAkBAWAhKAAkBAUABKCAkBCUABICAoACUEBICEoACQEBYCEoACQEBQA\nEoICQEJQAEgICgAJQQEgISgAJAQFgISgAJAQFAASggJAQlAASAgKAAlBASAhKAAkBAWAhKAAkNiM\nMcbsEQA8fm4oACQEBYCEoACQEBQAEoICQEJQAEj8BhnvJGruvvycAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x2158a4d00f0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Color palettes used in figures (from http://tristen.ca/hcl-picker/#/hlc/11/1/733A3C/C59343)\n",
-    "pal0 = ['#C59343','#2A7D83','#733A3C', '#576583'] \n",
+    "'''pal0 = ['#C59343','#2A7D83','#733A3C', '#576583'] \n",
     "sns.palplot(pal0)\n",
     "pal01 = ['#733A3C','#784457','#6E5371','#576583','#377687',\n",
     "         '#26847C','#408E67','#699550','#97963F','#C59343']\n",
@@ -174,7 +124,7 @@
     "       '#B2953E','#C59343']\n",
     "sns.palplot(pal3)\n",
     "pal4 = ['#6B465F','#6A5D7D','#5C7796','#48C09D','#76D48A','#AFE376','#EFEE69']\n",
-    "sns.palplot(pal4)"
+    "sns.palplot(pal4)'''"
    ]
   },
   {
